--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/package-lock.json
+/redux
 /.pnp
 .pnp.js
 
@@ -21,3 +23,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
